// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expense 1`] = `
<h1>
  Viewing 
  1
   expense 
  totalling 
  $12.94
</h1>
`;

exports[`should render ExpensesSummary with multiple expenses 1`] = `
<h1>
  Viewing 
  2
   expenses 
  totalling 
  $30.00
</h1>
`;
